--- a/teaching.config
+++ b/teaching.config
@@ -1,15 +1,19 @@
 [knowledge1]
 type = def
 content = filtered space
+worstcase = 30
 
 [knowledge2]
 type = def
 content = Martingale
+worstcase = 60
 
 [knowledge3]
 type = thm
 content = Doob's optional-stopping theorem
+worstcase = 40
 
 [knowledge4]
 type = thm
 content = convergence theorem
+worstcase = 40
